--- a/style.css
+++ b/style.css
@@ -5,8 +5,33 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 100vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
     box-sizing: border-box;
     background-image: url(images/bg-desktop.svg);
     background-repeat: no-repeat;
     background-color: var(--violet);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.illustration-img {
+    width: 45vw;
+    height: 70vh;
+}
+#image {
+    width: 100%;
+    height: 100%;
+}
+.illustration-txt {
+    width: 40vw;
+    height: 70vh;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;    
+}
+h1 {font-weight: 700;
+    font-size: 240%;
 }
