--- a/style.css
+++ b/style.css
@@ -13,13 +13,23 @@ body {
     background-image: url(images/bg-desktop.svg);
     background-repeat: no-repeat;
     background-color: var(--violet);
+}
+.logo {
+    width: 13vw;
+    height: 10vh;
+    margin-top: 5vh;
+}
+.logo-div {
+}
+.flex-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 8vh;
 }
 .illustration-img {
     width: 45vw;
-    height: 70vh;
+    height: 60vh;
 }
 #image {
     width: 100%;
@@ -27,7 +37,7 @@ body {
 }
 .illustration-txt {
     width: 40vw;
-    height: 70vh;
+    height: 60vh;
     color: white;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;    
