--- a/style.css
+++ b/style.css
@@ -13,19 +13,18 @@ body {
     background-image: url(images/bg-desktop.svg);
     background-repeat: no-repeat;
     background-color: var(--violet);
+    
 }
 .logo {
     width: 13vw;
     height: 10vh;
-    margin-top: 5vh;
-}
-.logo-div {
+    margin-top: 4vh;
 }
 .flex-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 6vh;
+    margin-top: 5vh;
 }
 .illustration-img {
     width: 45vw;
@@ -61,4 +60,20 @@ h1 {font-weight: 700;
 .button:hover {
     background-color: var(--soft-magenta);
     color: white;
+}
+.icons {
+    font-size: 20px;
+    color: white;
+    position: relative;
+    left: 80%;
+}
+.icon-style {
+    border: 1px solid white;
+    border-radius: 50%;
+    padding: 10px;
+    margin-right: 15px;
+}
+.icon-style:hover {
+    color: var(--soft-magenta);
+    border: 1px solid var(--soft-magenta);
 }
