--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body {
     padding: 0;
     height: 100vh;
     width: 100vw;
-    padding-left: 5vw;
-    padding-right: 5vw;
     box-sizing: border-box;
     background-image: url(images/bg-desktop.svg);
     background-repeat: no-repeat;
@@ -94,12 +92,26 @@ h1 {font-weight: 700;
         flex-direction: column;
     }
     .illustration-img {
-        width: 80vw;
+        width: 75vw;
         height: 50vh;
     }
     .illustration-txt {
         text-align: center;
-        width: 80vw;
+        width: 75vw;
     }
     h1 {font-size: 200%;}
+    p {font-size: 120%;
+        margin-bottom: 50px;
+    }
+    .button {
+        width: 70%;
+        margin: 0 auto;
+    }
+    .icons {
+        left: 0;
+        margin: 0 auto;
+        width: 100%;
+        text-align: center;
+        padding-bottom: 50px;
+    }
 }
